Bug 92720 - EDITING: Report-Builder - Report fails to open with Charts in a Report
Summary: EDITING: Report-Builder - Report fails to open with Charts in a Report
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.0.0.3 rc
Hardware: All All
: high normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.2.0 target:5.1.1 target:5.0.6
Keywords: bibisected, bisected, haveBacktrace, regression
: 93765 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-14 06:15 UTC by Robert Großkopf
Modified: 2016-10-25 19:11 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Dialog with failure-message, when opening report with chart (48.70 KB, image/png)
2015-07-14 06:15 UTC, Robert Großkopf
Details
Apple crash trace (113.41 KB, text/plain)
2015-07-14 14:27 UTC, Alex Thurgood
Details
bt for crash on master (47.68 KB, text/plain)
2015-07-14 14:37 UTC, Alex Thurgood
Details
bt with debug symbols (21.55 KB, text/plain)
2015-09-02 20:38 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2015-07-14 06:15:32 UTC
Created attachment 117223 [details]
Dialog with failure-message, when opening report with chart

Download https://bugs.documentfoundation.org/attachment.cgi?id=117222 .
Try to run the report "report_gender_chart".
Fails with LO 5.0.0.3 rc with the attached message in a dialog.
"report_gender_chart_new" fails the same way.

Both reports are reports with a chart.

Reports with charts could be opened with all versions 4.*, fails before with the message "failed to parse the report".

Have tested this with OpenSUSE 13.2 64bit rpm Linux.
Comment 1 Alex Thurgood 2015-07-14 14:24:53 UTC
Chart opens with 

Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Locale : fr_

OSX 10.10.4


Chart fails to open in

Version: 5.1.0.0.alpha1+
Build ID: 7f0161d88e3a496361e2209d31cc7e9ef42a677e
Locale: fr-FR (fr.UTF-8)

LO hangs, spinning beachball, then crashes - no error message

Apple trace enclosed
Comment 2 Alex Thurgood 2015-07-14 14:27:32 UTC
Created attachment 117232 [details]
Apple crash trace
Comment 3 Alex Thurgood 2015-07-14 14:37:10 UTC
Created attachment 117233 [details]
bt for crash on master
Comment 4 Julien Nabet 2015-07-14 21:34:58 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

It's the same as https://bugs.documentfoundation.org/show_bug.cgi?id=92654#c7
with the same patch as I indicated there, I don't reproduce the crash.
Michael: any thought?
(diff --git a/xmloff/source/core/nmspmap.cxx b/xmloff/source/core/nmspmap.cxx
index b355f03..ff94b76 100644
--- a/xmloff/source/core/nmspmap.cxx
+++ b/xmloff/source/core/nmspmap.cxx
@@ -216,6 +216,7 @@ OUString SvXMLNamespaceMap::GetQNameByKey( sal_uInt16 nKey,
             return sQName.makeStringAndClear();
         }
         case XML_NAMESPACE_XML:
+        case XML_NAMESPACE_LO_EXT:
         {
             // this namespace is reserved, and needs not to be declared
             OUStringBuffer sQName;
)
Comment 5 Matthew Francis 2015-08-11 09:48:42 UTC
Specifically this seems to have begun at the below commit.
Not Cc'ing moggi on bugs by his request.

    commit 6acc6c011d3afd6834efeee1b2efe43652a86f2e
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Mon Apr 6 15:26:28 2015 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Wed Apr 8 13:40:11 2015 +0000
    
        text:p is not allowed as child element of draw:frame
    
        Regression from #i118485#.
    
        Change-Id: Ib242ca1417f46b731d62d117132cbed6c02448fb
Comment 6 Doug 2015-08-12 17:03:39 UTC
Encountered on Win7 using LO 5.0.0.5 and Linux OpenSuse 13.2 using LO 5.0.1.1.

Same error.  Error can be avoided only by deleting charts from report.  Results in LO being unable to open reports that functioned in LO 4.4
Comment 7 Alex Thurgood 2015-08-30 07:05:17 UTC
*** Bug 93765 has been marked as a duplicate of this bug. ***
Comment 8 Julien Nabet 2015-09-02 20:38:40 UTC
Created attachment 118359 [details]
bt with debug symbols
Comment 9 Julien Nabet 2015-09-20 16:01:17 UTC
*** Bug 94355 has been marked as a duplicate of this bug. ***
Comment 10 Robinson Tryon (qubit) 2015-12-13 11:13:13 UTC Comment hidden (obsolete)
Comment 11 Michael Stahl 2016-02-03 22:48:04 UTC
fixed on master

also fixed the problem that the report document didn't actually have a base url which causes asserts on master when loading the nested embedded charts
Comment 12 Commit Notification 2016-02-03 22:48:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=969a760e2bad7f65c28eba425af1751946b09d76

reportbuilder: tdf#92720: add loext namespace

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2016-02-05 15:37:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=216738ffa610848eebfd6bbbad6bc74db96ef051&h=libreoffice-5-1

reportbuilder: tdf#92720: add loext namespace

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2016-02-06 03:51:27 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c29bc3305e835d6f32195b4d9528e64b64d4019e&h=libreoffice-5-0

reportbuilder: tdf#92720: add loext namespace

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Robert Großkopf 2016-02-07 19:00:47 UTC
Could confirm the fix works with 
Version: 5.2.0.0.alpha0+
Build ID: 5d410b57bee6fe6e4ffcf9365874708f1b2a2662
CPU Threads: 4; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-07_06:52:31
Locale: de-DE (de_DE.UTF-8)

Report with chart could be opened now (again).

Many thanks to Michael.