reportbuilder: tdf#92720: add loext namespace

... to allow export of paragraphs in shapes.

(regression from 6acc6c011d3afd6834efeee1b2efe43652a86f2e)

Change-Id: I2c23e686a2cfcd997d3393b0f9fb4cdcab7252b7